Camino only - Bug 497591: Don't crash when showing tabs in extremely small windows. sr=pink