camino/src/browser/BrowserTabBarView.mm
@@ -551,11 +551,16 @@ const int kEscapeKeyCode = 53;
 
   // check to see whether or not the tabs will fit without the overflows
   float widthOfATab = floor(NSWidth([self tabsRectWithOverflow:NO]) / numberOfTabs);
-  mOverflowTabs = widthOfATab < kMinTabWidth;
+  // We check numberOfTabs > 1 because a window can end up so small that it
+  // can't hold even one min-width tab (e.g., due to JS).
+  mOverflowTabs = widthOfATab < kMinTabWidth && numberOfTabs > 1;
 
   if (mOverflowTabs) {
     float widthOfTabBar = NSWidth([self tabsRect]);
     mNumberOfVisibleTabs = (int)floor(widthOfTabBar / kMinTabWidth);
+    // Even in absurdly small windows, show at least one tab.
+    if (mNumberOfVisibleTabs == 0)
+      mNumberOfVisibleTabs = 1;
     widthOfATab = floor(widthOfTabBar / mNumberOfVisibleTabs);
     if (mNumberOfVisibleTabs + mLeftMostVisibleTabIndex > numberOfTabs)
       [self scrollTabIndexToVisible:(numberOfTabs - mNumberOfVisibleTabs)];
